# catfood

./: AGENTS.md  CONFIG_EXAMPLE.md  Cargo.toml  LUA_COMPONENTS.md  README.md  TODO.md  sparkline_test_config.json  test_config.json  test_lua_setup.sh
.github/workflows/: ci.yml  release.yml
crates/bar/: Cargo.toml  README.md
crates/bar/src/: component_manager.rs  config.rs  lib.rs  main.rs  time_utils.rs
crates/bar/src/components/: cpu.rs  kitty_tabs.rs  left_bar.rs  middle_bar.rs  mod.rs  ram.rs  right_bar.rs  time.rs  weather.rs  wifi.rs  windows.rs  workspaces.rs
crates/catfood/: Cargo.toml  README.md
crates/catfood/src/: main.rs
docs/: .gitignore  Cargo.toml  Sherwood.toml
docs/.sherwood/release/: dev  generate
docs/content/: index.md
examples/: config_with_lua.json  lua_clock.lua  test_lua.rs
src/: component_manager.rs  config.rs  logging.rs  lua_component.rs  main.rs
src/components/: battery.rs  brightness.rs  middle_bar.rs  mod.rs  right_bar.rs  status_bar.rs  system_bar.rs  system_info.rs  time.rs  volume.rs  weather.rs  windows.rs  workspaces.rs
