[workspace]
members = [
    "crates/bar",
    "crates/catfood",
]
resolver = "2"

[workspace.metadata.release]
publish = false
shared-version = true
tag-name = "v{{version}}"
verify = true

[workspace.package]
version = "0.3.0"
authors = ["Thom Bruce <thom@thombruce.com>"]
description = "A modular utility suite for system management, built with Rust and Ratatui"
homepage = "https://github.com/thombruce/catfood"
license = "MIT"
repository = "https://github.com/thombruce/catfood"
edition = "2024"

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
strip = true
